3.7.0 b681
Code cleanup